Added QsfException, added some functions in QsfRequest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(qsf)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(qsf main.cpp QsfRequest.cpp QsfRequest.h RequestHandler.cpp RequestHandler.h)
+add_executable(qsf main.cpp QsfRequest.cpp QsfRequest.h RequestHandler.cpp RequestHandler.h QsfException.cpp QsfException.h)
 target_link_libraries(qsf -lfastcgipp)
