Moved classes to namespace Qsf, ini parsing, privilege downgrading

--- a/config.ini
+++ b/config.ini
@@ -7,12 +7,21 @@ listen = 127.0.0.1
 port = 8000
 ; UNIX only: path to the socket
 path = /etc/qsf/sock.d/qsf.sock
-; UNIX only: permissions of the socket (unsigned 32 bit integer)
-permissions = 0xffffffffUL
+; UNIX only: permissions of the socket (unsigned 32 bit integer) (strtol(mode, 0, 8))
+; leave empty for no permission set / 0xffffffffUL
+; permissions = 0xffffffffUL ; example from libfastcgipp
+;permissions = 0600
+permissions =
 ; UNIX only: owner of the socket
-owner = www-data
+owner = tinyp
 ; UNIX only: group of the socket
-group = www-data
+group = tinyp
+
+[privileges]
+; user QSF should run as (if started as root)
+user = tinyp
+; group QSF should run as (if started as root)
+group = tinyp
 
 [post]
 ; Maximum post size (in kiB)
