Added some Doxygen-style documentation, hardware concurrency setting, fixed bugs

--- a/config.ini
+++ b/config.ini
@@ -26,3 +26,9 @@ group = tinyp
 [post]
 ; Maximum post size (in kiB)
 max_size = 5
+
+[system]
+; Fixed number of threads (fixed) or relative to std::thread::hardware_concurrency (hardware)
+concurrency = hardware
+; number of threads, absolute (fixed concurrency) or relative (threads*hardware_concurrency) (double)
+threads = 1.0
