--- a/config.ini
+++ b/config.ini
@@ -26,6 +26,9 @@ group = tinyp
 [post]
 ; Maximum post size (in kiB)
 max_size = 5
+; Access to raw post data (requires copying) always possible (always), never (never), orjust for non-standard
+; content types (nonstandard), i.e., all except application/x-www-form-urlencoded and multipart/form-data
+raw_access = nonstandard
 
 [system]
 ; Fixed number of threads (fixed) or relative to std::thread::hardware_concurrency (hardware)
