--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(qsf)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(qsf main.cpp Request.cpp Request.h RequestHandler.cpp RequestHandler.h Exception.cpp Exception.h)
+add_executable(qsf main.cpp Request.cpp Request.h RequestHandler.cpp RequestHandler.h Exception.cpp Exception.h Types/Compound.h Response.cpp Response.h)
 target_link_libraries(qsf -lfastcgipp)
