Preparation for application loading, removal of cookie importing (still linker error)

--- a/config.ini
+++ b/config.ini
@@ -35,3 +35,7 @@ raw_access = nonstandard
 concurrency = hardware
 ; number of threads, absolute (fixed concurrency) or relative (threads*hardware_concurrency) (double)
 threads = 1.0
+
+[application]
+; Path to application to load
+path = test.so
