--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,6 @@ project(qsf)
 set(CMAKE_CXX_STANDARD 14)
 
 # ... Exception.h Types/Compound.h Response.cpp ...
+# ... Application.h
 add_executable(qsf main.cpp Request.cpp Request.h RequestHandler.cpp RequestHandler.h Exception.cpp Exception.h Response.cpp Response.h)
-target_link_libraries(qsf -lfastcgipp)
+target_link_libraries(qsf -ldl -lfastcgipp)
