Fixed segfault, request handling through libraries shoud work now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,6 @@ set(CMAKE_CXX_STANDARD 14)
 # ... Application.h
 add_executable(qsf main.cpp Request.cpp Request.h RequestHandler.cpp RequestHandler.h Exception.cpp Exception.h Response.cpp Response.h)
 target_link_libraries(qsf -ldl -lfastcgipp)
+
+set(CMAKE_CXX_FLAGS "-Wl,--export-dynamic")
+set(CMAKE_EXE_LINKER_FLAGS "-Wl,--export-dynamic")
