Added not yet optimal htmlDecode and a not yet optimal regex_replace_callback util

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 14)
 
 # ... Exception.h Types/Compound.h Response.cpp ...
 # ... Application.h
-add_executable(qsf main.cpp Request.cpp Request.h RequestHandler.cpp RequestHandler.h Exception.cpp Exception.h Response.cpp Response.h Encoding.cpp Encoding.h)
+add_executable(qsf main.cpp Request.cpp Request.h RequestHandler.cpp RequestHandler.h Exception.cpp Exception.h Response.cpp Response.h Encoding.cpp Encoding.h Utils.cpp Utils.h)
 target_link_libraries(qsf -ldl -lfastcgipp)
 
 set(CMAKE_CXX_FLAGS "-Wl,--export-dynamic")
