Move config handling to new Config class, does not work properly yet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@ project(qsf)
 
 set(CMAKE_CXX_STANDARD 14)
 
-# ... Exception.h Types/Compound.h Connection.cpp ...
+# ... SysException.h Types/Compound.h Connection.cpp ...
 # ... Application.h
-add_executable(qsf main.cpp Request.cpp Request.h RequestHandler.cpp RequestHandler.h Exception.cpp Exception.h Types/Compound.h Connection.cpp Connection.h Encoding.cpp Encoding.h Utils.cpp Utils.h Session.cpp Session.h)
+add_executable(qsf main.cpp Request.cpp Request.h RequestHandler.cpp RequestHandler.h SysException.cpp SysException.h Types/Compound.h Connection.cpp Connection.h Encoding.cpp Encoding.h Utils.cpp Utils.h Session.cpp Session.h inih/ini.c inih/ini.h Config.cpp Config.h)
 target_link_libraries(qsf -ldl -lfastcgipp -lcrypto)
 
 set(CMAKE_CXX_FLAGS "-Wl,--export-dynamic")
