Bug fixes, Config now working, config access through Connection

--- a/config.ini
+++ b/config.ini
@@ -39,3 +39,7 @@ threads = 1.0
 [application]
 ; Path to application to load
 path = ./cmake-build-debug/libqsftest.so
+
+[session]
+; Name of the session cookie
+cookie = SESSION
