Add SameSite cookie attribute values, case conversion utils, Session options in config.ini

--- a/config.ini
+++ b/config.ini
@@ -42,4 +42,16 @@ path = ./cmake-build-debug/libqsftest.so
 
 [session]
 ; Name of the session cookie
-cookie = SESSION
+cookie_name = SESSION
+; If session cookies may also be sent via insecure (HTTP) connections, set this to off
+cookie_secure = on
+; Set this to off if httpOnly attribute should not be set in the cookie (making it modifiable through JS, danger of XSS)
+; (not yet supported by all browsers, but at least protects those with a compatible browser)
+cookie_httponly = on
+; If set to lax, cookie may be sent with some cross-site GET requests, if off, cookie may be sent with all XS requests
+; strict is recommended, sending the cookie with XS requests is then prohibited (not yet supported by all browsers)
+cookie_samesite = strict
+; Session duration in seconds
+duration = 1440
+; Automatically start a session when the user connects? (on/off)
+autostart = off
