More preparations for Session support and other small improvements

--- a/config.ini
+++ b/config.ini
@@ -25,15 +25,20 @@ group = tinyp
 
 [post]
 ; Maximum post size (in kiB)
+; default value: 0
 max_size = 5
 ; Access to raw post data (requires copying) always possible (always), never (never), or just for non-standard
 ; content types (nonstandard), i.e., all except application/x-www-form-urlencoded and multipart/form-data
+; default value: nonstandard
+; possible values: always, nonstandard, never
 raw_access = nonstandard
 
 [system]
 ; Fixed number of threads (fixed) or relative to std::thread::hardware_concurrency (hardware)
+; default value: fixed
 concurrency = hardware
 ; number of threads, absolute (fixed concurrency) or relative (threads*hardware_concurrency) (double)
+; default value: 1.0
 threads = 1.0
 
 [application]
@@ -42,16 +47,40 @@ path = ./cmake-build-debug/libqsftest.so
 
 [session]
 ; Name of the session cookie
+; default value: SESSION
 cookie_name = SESSION
+; For session cookie properties, please note the precedence:
+; - (highest) passing a Cookie parameter to Session::start() -> the following 3 cookie_* properties will be ignored
+; - properties defined here
+; - (lowest) Connection::setCookiePolicy(Cookie)
+; -> boolean properties (Secure, HttpOnly): will be set if true/on anywhere,
+;    integral properties (SameSite, Max-Age): value with highest precedence that is >0 will be taken
+
 ; If session cookies may also be sent via insecure (HTTP) connections, set this to off
+; default value: on
 cookie_secure = on
 ; Set this to off if httpOnly attribute should not be set in the cookie (making it modifiable through JS, danger of XSS)
 ; (not yet supported by all browsers, but at least protects those with a compatible browser)
+; default value: on
 cookie_httponly = on
 ; If set to lax, cookie may be sent with some cross-site GET requests, if off, cookie may be sent with all XS requests
 ; strict is recommended, sending the cookie with XS requests is then prohibited (not yet supported by all browsers)
+; default value: strict
+; possible values: strict, lax, off
 cookie_samesite = strict
-; Session duration in seconds
-duration = 1440
+
+; Set this to off if the cookie should not include an explicit Expires and Max-Age property (according to keepalive)
+; (the browser will then delete it when it closes)
+; WARNING: CookiePolicy sets absolute values for Expires and Max-Age and might make proper session handling impossible,
+; therefore, it is recommended to leave this on.
+; default value: on
+cookie_expires = on
+; How many seconds should a session be kept alive (server-side) without being touched by Session::start() or autostart?
+; (i.e., in general, the maximum time a user can be inactive without having its session closed)
+; Sessions never outlive the runtime of the QSF process and cannot be set to being "infinite".
+; Use a database if you want to implement "permanent sessions"/"stay logged in".
+; default value: 1800
+keepalive = 3600
 ; Automatically start a session when the user connects? (on/off)
+; default value: off
 autostart = off
