Finished Session::start(), still untested

--- a/config.ini
+++ b/config.ini
@@ -81,6 +81,14 @@ cookie_expires = on
 ; Use a database if you want to implement "permanent sessions"/"stay logged in".
 ; default value: 1800
 keepalive = 3600
-; Automatically start a session when the user connects? (on/off)
+; Automatically start a session when a user connects? (on/off)
+; Please note that session starting might slow down connections due to the synchronization overhead with other calls.
+; We recommend to leave this off and not to start sessions for resources that do not need them,
+; such as images, styles, JS, etc.
 ; default value: off
 autostart = off
+; Bind sessions to IP addresses, and if yes, what to do in case of an IP mismatch?
+; (might cause problems with switching between WiFi and mobile networks, recommended only for security sensitive apps)
+; possible values: strict (invalidate session when accessed with different IP), lax (ignore access), off
+; default value: off
+validate_ip = off
