Session more or less complete (untested)

--- a/config.ini
+++ b/config.ini
@@ -92,3 +92,6 @@ autostart = off
 ; possible values: strict (invalidate session when accessed with different IP), lax (ignore access), off
 ; default value: off
 validate_ip = off
+; Probability that the garbage collector will be run while running Session::start() is 1/(gc_divisor).
+; default value: 100 (i.e., 1% chance)
+gc_divisor = 100
