Add Types::Universal, fixed exception classes and made them header-only

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 14)
 
 # ... SysException.h Types/Compound.h Connection.cpp ...
 # ... Application.h
-add_executable(qsf main.cpp Request.cpp Request.h RequestHandler.cpp RequestHandler.h SysException.cpp SysException.h Types/Compound.h Connection.cpp Connection.h Encoding.cpp Encoding.h Utils.cpp Utils.h Session.cpp Session.h inih/ini.c inih/ini.h Config.cpp Config.h Crypto.cpp Crypto.h UserException.cpp UserException.h)
+add_executable(qsf main.cpp Request.cpp Request.h RequestHandler.cpp RequestHandler.h SysException.h Types/Compound.h Connection.cpp Connection.h Encoding.cpp Encoding.h Utils.cpp Utils.h Session.cpp Session.h inih/ini.c inih/ini.h Config.cpp Config.h Crypto.cpp Crypto.h UserException.h Types/Universal.h)
 target_link_libraries(qsf -ldl -lfastcgipp -lcrypto)
 
 set(CMAKE_CXX_FLAGS "-Wl,--export-dynamic")
