--- a/config.ini
+++ b/config.ini
@@ -95,3 +95,8 @@ validate_ip = off
 ; Probability that the garbage collector will be run while running Session::start() is 1/(gc_divisor).
 ; default value: 100 (i.e., 1% chance)
 gc_divisor = 100
+
+[crypto]
+; Cost factor for salt generation for password hashing using the bcrypt algorithm. May be increased on stronger hardware.
+; default value: 12
+bcrypt_cost = 12
