--- a/include/Application.h.in
+++ b/include/Application.h.in
@@ -1,8 +1,26 @@
-//
-// Created by tobias on 08/11/18.
-//
+/**
+ * \file Application.h
+ * \brief This file will be configured by CMake and contains the necessary properties to ensure that a loaded app
+ * has been compiled against the same QSF version as the qsfrunner loading it (or, at least, one with a compatible ABI).
+ */
 
-// File for application config
+/*
+ * Copyright (C) 2019 Jan Flaig.
+ *
+ * This file is part of QSF.
+ *
+ * QSF is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License,
+ * version 3, as published by the Free Software Foundation.
+ *
+ * QSF is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with QSF.  If not, see <https://www.gnu.org/licenses/>.
+ */
 
 #ifndef QSF_APPLICATION_H
 #define QSF_APPLICATION_H
