--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_executable(qsf
         include/qsf/Cookie.h
         include/qsf/Log.h
         include/qsf/AccessFilterList.h
+        include/qsf/AppInit.h
         include/qsf/Types/Universal.h
 
         src/main.cpp
@@ -47,8 +48,12 @@ add_executable(qsf
         src/Crypto.cpp
         src/Log.cpp
 
+        libs/inih/ini.h
         libs/inih/ini.c
-        libs/inih/ini.h include/qsf/AppInit.h)
+
+        libs/base64/base64.h
+        libs/base64/base64.cpp)
+
 target_link_libraries(qsf -ldl -lfastcgipp -lcrypto ${CMAKE_BINARY_DIR}/libbcrypt.a)
 target_include_directories(qsf PUBLIC
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_LIBDIR}>
