Add a way to specify listening to all TCP interfaces in the config (listen = all).

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [fastcgi]
 ; Listen to TCP port (tcp) or UNIX socket (unix)
 mode = tcp
-; TCP only: IP address (range) to listen to
+; TCP only: IP address (of an interface) to listen to (for all interfaces, use "all", without quotes)
 listen = 127.0.0.1
 ; TCP only: TCP port to listen on
 port = 8000
