Add doxyfile and CMake commands for building docs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,3 +82,17 @@ install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/qsf"
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/include/qsf/Application.h"
         DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/qsf
         COMPONENT Development)
+
+# build documentation
+find_package(Doxygen)
+if(DOXYGEN_FOUND)
+    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/docs/Doxyfile.in"
+            "${CMAKE_CURRENT_BINARY_DIR}/Doxyfile" @ONLY)
+    add_custom_target(docs
+            "${DOXYGEN_EXECUTABLE}" "${CMAKE_CURRENT_BINARY_DIR}/Doxyfile"
+            WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
+            COMMENT "Generating Doxygen documentation" VERBATIM)
+    install(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/docs/"
+            DESTINATION ${CMAKE_INSTALL_DOCDIR}
+            OPTIONAL)
+endif(DOXYGEN_FOUND)
