--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,7 @@ if(DOXYGEN_FOUND)
             "${DOXYGEN_EXECUTABLE}" "${CMAKE_CURRENT_BINARY_DIR}/Doxyfile"
             WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
             COMMENT "Generating Doxygen documentation" VERBATIM)
-    install(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/docs/"
+    install(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/docs"
             DESTINATION ${CMAKE_INSTALL_DOCDIR}
             OPTIONAL)
 endif(DOXYGEN_FOUND)
