--- a/include/Application.h.in
+++ b/include/Application.h.in
@@ -24,13 +24,13 @@
 
 #ifndef QSF_APPLICATION_H
 #define QSF_APPLICATION_H
-#define QSF_VERSION_MAJOR @QSF_VERSION_MAJOR@
-#define QSF_VERSION_MINOR @QSF_VERSION_MINOR@
+#define SORU_VERSION_MAJOR @SORU_VERSION_MAJOR@
+#define SORU_VERSION_MINOR @SORU_VERSION_MINOR@
 
 #include <qsf/Connection.h>
 #include <qsf/AppInit.h>
 
-extern "C" const int qsf_version_major = QSF_VERSION_MAJOR;
-extern "C" const int qsf_version_minor = QSF_VERSION_MINOR;
+extern "C" const int soru_version_major = SORU_VERSION_MAJOR;
+extern "C" const int soru_version_minor = SORU_VERSION_MINOR;
 
 #endif //QSF_APPLICATION_H
