Renaming to soru (part 2)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.7)
-project(qsf VERSION 0.1)
+project(soru VERSION 0.1)
 
 set(CMAKE_CXX_STANDARD 14)
 
@@ -14,35 +14,35 @@ endif()
 
 # configure the file that we need for version checking
 configure_file(${PROJECT_SOURCE_DIR}/include/Application.h.in
-        ${PROJECT_BINARY_DIR}/include/qsf/Application.h)
+        ${PROJECT_BINARY_DIR}/include/soru/Application.h)
 
 # ... SysException.h Types/Compound.h Connection.cpp ...
 file(GLOB BlowfishCFiles libs/libbcrypt/crypt_blowfish/*.c)
 add_library(bcrypt STATIC libs/libbcrypt/bcrypt.c ${BlowfishCFiles})
 
-add_executable(qsf
-        include/qsf/Request.h
-        include/qsf/RequestHandler.h
-        include/qsf/SysException.h
-        include/qsf/Connection.h
-        include/qsf/Encoding.h
-        include/qsf/Utils.h
-        include/qsf/Session.h
-        include/qsf/Config.h
-        include/qsf/Crypto.h
-        include/qsf/UserException.h
-        include/qsf/Cookie.h
-        include/qsf/Log.h
-        include/qsf/AccessFilterList.h
-        include/qsf/AppInit.h
-        include/qsf/SmtpMailer.h
-        include/qsf/Email.h
-        include/qsf/Universal.h
-        include/qsf/Engines/HashingEngine.h
-        include/qsf/Engines/Argon2HashingEngine.h
-        include/qsf/Engines/BcryptHashingEngine.h
-        include/qsf/Engines/HashTypeTable.h
-        include/qsf/Engines/DefaultHashTypeTable.h
+add_executable(sorun
+        include/soru/Request.h
+        include/soru/RequestHandler.h
+        include/soru/SysException.h
+        include/soru/Connection.h
+        include/soru/Encoding.h
+        include/soru/Utils.h
+        include/soru/Session.h
+        include/soru/Config.h
+        include/soru/Crypto.h
+        include/soru/UserException.h
+        include/soru/Cookie.h
+        include/soru/Log.h
+        include/soru/AccessFilterList.h
+        include/soru/AppInit.h
+        include/soru/SmtpMailer.h
+        include/soru/Email.h
+        include/soru/Universal.h
+        include/soru/Engines/HashingEngine.h
+        include/soru/Engines/Argon2HashingEngine.h
+        include/soru/Engines/BcryptHashingEngine.h
+        include/soru/Engines/HashTypeTable.h
+        include/soru/Engines/DefaultHashTypeTable.h
 
         src/main.cpp
         src/Request.cpp
@@ -66,16 +66,16 @@ add_executable(qsf
         libs/base64/base64.h
         libs/base64/base64.cpp)
 
-target_link_libraries(qsf -ldl -lfastcgipp -lcrypto -lcurl -largon2 ${CMAKE_BINARY_DIR}/libbcrypt.a)
-target_include_directories(qsf PUBLIC
+target_link_libraries(sorun -ldl -lfastcgipp -lcrypto -lcurl -largon2 ${CMAKE_BINARY_DIR}/libbcrypt.a)
+target_include_directories(sorun PUBLIC
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_LIBDIR}>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
 
-add_library(qsftest SHARED
+add_library(sorutest SHARED
         tests/app.h
-        tests/qsftest.cpp)
-target_include_directories(qsftest PUBLIC
+        tests/sorutest.cpp)
+target_include_directories(sorutest PUBLIC
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_LIBDIR}>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
@@ -101,17 +101,17 @@ set(CMAKE_EXE_LINKER_FLAGS "-Wl,--export-dynamic")
 
 # install targets, components should be checked again w.r.t. packaging
 include(GNUInstallDirs)
-install(TARGETS qsf
+install(TARGETS sorun
         DESTINATION ${CMAKE_INSTALL_BINDIR}
         COMPONENT Runtime)
 install(FILES "${PROJECT_SOURCE_DIR}/config.ini"
-        DESTINATION ${CMAKE_INSTALL_SYSCONFDIR}/qsf
+        DESTINATION ${CMAKE_INSTALL_SYSCONFDIR}/soru
         COMPONENT Runtime)
-install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/qsf"
+install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/soru"
         DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
         COMPONENT Development)
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/include/qsf/Application.h"
-        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/qsf
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/include/soru/Application.h"
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/soru
         COMPONENT Development)
 
 # build documentation
