--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -792,8 +792,8 @@ WARN_LOGFILE           =
 # spaces. See also FILE_PATTERNS and EXTENSION_MAPPING
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = "@CMAKE_CURRENT_SOURCE_DIR@/include/qsf" \
-                         "@CMAKE_CURRENT_BINARY_DIR@/include/qsf" \
+INPUT                  = "@CMAKE_CURRENT_SOURCE_DIR@/include/soru" \
+                         "@CMAKE_CURRENT_BINARY_DIR@/include/soru" \
                          "@CMAKE_CURRENT_SOURCE_DIR@/src" \
                          "@CMAKE_CURRENT_SOURCE_DIR@/README.md" \
                          "@CMAKE_CURRENT_SOURCE_DIR@/docs"
