Modify Application.h.in to include required app functions, allow app init to fail by returning != 0, some doc updates

--- a/config.ini
+++ b/config.ini
@@ -18,9 +18,9 @@ owner = tinyp
 group = tinyp
 
 [privileges]
-; user QSF should run as (if started as root)
+; user soru should run as (if started as root)
 user = tinyp
-; group QSF should run as (if started as root)
+; group soru should run as (if started as root)
 group = tinyp
 
 [post]
