Eliminate preprocessor constants in RequestHandler, add support for SO_REUSEADDR through fastcgipp

--- a/config.ini
+++ b/config.ini
@@ -16,6 +16,9 @@ permissions =
 owner = tinyp
 ; UNIX only: group of the socket
 group = tinyp
+; set SO_REUSEADDR socket option
+; default value: on
+reuseaddr = on
 
 [privileges]
 ; user soru should run as (if started as root)
